--- a/Demo/Views/Courses/Instructor.cshtml
+++ b/Demo/Views/Courses/Instructor.cshtml
@@ -548,7 +548,7 @@
 			</div>
 
 			<div class="form-content">
-				<form id="instructorForm" asp-controller="Instructors" asp-action="Add" method="POST" enctype="multipart/form-data">
+				<form id="instructorForm" asp-controller="Instructors" asp-action="Create" method="POST" enctype="multipart/form-data">
 					@Html.AntiForgeryToken()
 
 					<!-- Personal Information Section -->
