--- a/Demo/Views/Students/Index.cshtml
+++ b/Demo/Views/Students/Index.cshtml
@@ -116,7 +116,7 @@
 			flex: 1;
 			margin-left: 250px;
 			padding: 30px;
-			width: calc(100% - 250px);
+			width: calc(100% - 150px);
 			background: rgba(255, 255, 255, 0.95);
 			backdrop-filter: blur(10px);
 			min-height: 100vh;
@@ -521,10 +521,11 @@
 					</a>
 				</li>
 				<li>
-					<div class="menu-item">
-						<span class="menu-icon">💰</span>
-						<span>Payments</span>
-					</div>
+					<a href="/Courses/PaymentList" class="menu-link" style="text-decoration:none;color:inherit;">
+						<div class="menu-item">
+							<span class="menu-icon">💰</span>
+							<span>Payments</span>
+						</div>
 				</li>
 				<li>
 					<div class="menu-item">
