--- a/Demo/Views/Courses/Instructor.cshtml
+++ b/Demo/Views/Courses/Instructor.cshtml
@@ -507,10 +507,12 @@
 				</a>
 			</li>
 			<li>
-				<div class="menu-item">
-					<span class="menu-icon">💰</span>
-					<span>Payments</span>
-				</div>
+				<a href="/Courses/PaymentList" class="menu-link" style="text-decoration:none;color:inherit;">
+					<div class="menu-item">
+						<span class="menu-icon">💰</span>
+						<span>Payments</span>
+					</div>
+					</a>
 			</li>
 			<li>
 				<div class="menu-item">
