--- a/Demo/Views/Students/AddCourse.cshtml
+++ b/Demo/Views/Students/AddCourse.cshtml
@@ -379,10 +379,11 @@
                 </a>
             </li>
             <li>
-                <div class="menu-item">
-                    <span class="menu-icon">💰</span>
-                    <span>Payments</span>
-                </div>
+                <a href="/Courses/PaymentList" class="menu-link" style="text-decoration:none;color:inherit;">
+                    <div class="menu-item">
+                        <span class="menu-icon">💰</span>
+                        <span>Payments</span>
+                    </div>
             </li>
             <li>
                 <div class="menu-item">
