add/remove cart

--- a/Demo/Views/Students/StudentHome.cshtml
+++ b/Demo/Views/Students/StudentHome.cshtml
@@ -655,9 +655,9 @@
                 <ul class="nav-links">
                     <li><a asp-controller="Students" asp-action="StudentHome" class="active">Home</a></li>
                     <li><a asp-controller="Students" asp-action="StudentCourses">Courses</a></li>
-                    <li><a href="#">Resources</a></li>
+                    <li><a >Resources</a></li>
                     <li><a href="#">About Us</a></li>
-                    <li><a href="#">Support</a></li>
+                    <li><a asp-controller="Students" asp-action="MyCart">My Cart</a></li>
                     
                     <li><a asp-controller="Students" asp-action="Profile">Profile</a></li>
                     
